--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,8 +1,6 @@
-// font
-$font: Nunito, sans-serif;
-
-// Colors
-$blue-dark: #132845;
-$blue-light: #596484;
-$white: #efefef;
-$red: #fd7777;
+// Font
+$font: 'Titillium Web', sans-serif;
+$white: #eee;
+$blue: #1974fd;
+$grey: #1d1d1d;
+$red: red;
