--- a/scss/layout/_general.scss
+++ b/scss/layout/_general.scss
@@ -6,13 +6,9 @@
 	box-sizing: border-box;
 }
 
-img {
-	max-width: 100%;
-	height: auto;
-}
-
 html {
 	height: 100%;
+	scroll-behavior: smooth;
 }
 
 body, html {
@@ -29,44 +25,43 @@ body, html {
 	clear: both;
 }
 
+// Font
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web:400,700&display=swap');
 
-// Main styles
-@import url('https://fonts.googleapis.com/css?family=Nunito:300,400,700');
-
+// General styles
 body {
 	font: 16px $font;
-	min-width: 500px;
+	background: darken($white, 5%);
+	color: $grey;
 	min-height: 500px;
-	overflow: hidden;
+	position: relative;
+
+	&.success {
+		.login {
+			top: -100vh;
+		}
+    }
 }
 
-.dialog {
-	@include align(false, true);
-	width: 500px;
-	padding: 30px 50px;
-	background: #fff;
-	position: fixed;
-	top: 50px;
-	box-shadow: 0 0 30px 0 rgba(0, 0, 0, .4);
-	font-size: 17px;
-	font-weight: 600;
-	text-align: center;
-	animation: window .5s 1;
-
-	&-overlay {
-		@include size(100%);
-		background: rgba(0, 0, 0, .4);
-		position: fixed;
-		top: 0;
-		left: 0;
-	}
+.main {
+	position: absolute;
+	top: 0;
+	min-height: 500px;
 }
 
-@keyframes window {
-	0% {
-		top: -100px;
-	}
-	100% {
-		top: 50px;
-	}
+.title {
+	font-size: 26px;
+	font-weight: 700;
+	margin: 10px 0 20px;
+}
+
+.loading::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, .8) url('../images/preloader.svg') no-repeat center;
+    border-radius: 10px;
 }
