--- a/scss/modules/_login.scss
+++ b/scss/modules/_login.scss
@@ -1,16 +1,26 @@
 .login {
-	height: 100vh;
+    height: 100vh;
+    min-height: 500px;
 	position: relative;
+	top: 0;
+	z-index: 2;
 	color: $white;
-	background: $blue-dark;
-	background: -moz-linear-gradient(-45deg, $blue-dark 0%, $blue-light 100%);
-	background: -webkit-linear-gradient(-45deg, $blue-dark 0%,$blue-light 100%);
-	background: linear-gradient(135deg, $blue-dark 0%,$blue-light 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$blue-dark}', endColorstr='#{$blue-light}',GradientType=1 );
+    background: url('../images/login.jpg');
+    transition: all .7s linear;
+    
+    &::before {
+        @include size(100%);
+        @include pos();
+        content: '';
+        background: rgba(0, 3, 19, .3);
+    }
 
 	&__form {
 		@include align(true, true);
-		width: 350px;
+        width: 400px;
+        padding: 25px;
+        background: rgba(0, 3, 19, .5);
+        border-radius: 5px;
 	}
 
 	&__title {
@@ -51,11 +61,16 @@
 		background: none;
 		color: $white;
 		border-bottom: 2px solid;
-		padding-left: 40px;
+        padding-left: 40px;
+        transition: all .3s;
 
 		&::-webkit-input-placeholder {
 			color: $white;
-		}
+        }
+        
+        &:focus {
+            border-bottom-color: $blue;
+        }
 	}
 
 	&__error {
@@ -85,10 +100,14 @@
 		span {
 			font-size: 12px;
 			background: rgba(255, 255, 255, .8);
-			color: $blue-dark;
+			color: $blue;
 			padding: 3px 10px;
 			margin-left: 15px;
 			position: relative;
+
+			b {
+				font-weight: 700;
+			}
 
 			&::before {
 				@include triangle(rgba(255, 255, 255, .8), 7px, left);
@@ -103,22 +122,31 @@
 		font: 700 20px/60px $font;
 		background: $white;
 		cursor: pointer;
-		color: $blue-dark;
+		color: $blue;
 		position: relative;
-		overflow: hidden;
+        overflow: hidden;
+        transition: all .3s;
 
-		&::after {
+        span {
+            position: relative;
+        }
+
+		&::before {
 			@include pos($t: 50%, $l: 50%);
 			@include size(400px, 400px);
 			content: '';
 			border-radius: 50%;
 			transform: translateX(-50%) translateY(-50%) scale(0);
 			transition: all .3s;
-			background: rgba(0, 0, 0, .2);
+            background: $blue;
 		}
 
-		&:focus::after {
-			transform: translateX(-50%) translateY(-50%) scale(1);
-		}
+		&:focus {
+            color: $white;
+
+            &::before {
+                transform: translateX(-50%) translateY(-50%) scale(1);
+            }
+        }
 	}
 }
